--- a/app/src/main/res/layout/float_control.xml
+++ b/app/src/main/res/layout/float_control.xml
@@ -1,128 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:theme="@style/AppTheme"
-	android:orientation="vertical"
 	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:gravity="center"
-	android:background="#EFFFFFFF">
+	android:layout_height="wrap_content">
 
-	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="match_parent"
+	<RelativeLayout
+		android:background="#EFFFFFFF"
+		android:layout_width="120dp"
 		android:layout_height="wrap_content">
 
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
+		<LinearLayout
+			android:orientation="vertical"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@id/btn_save"
-			android:text="SAVE"
-			android:layout_weight="1"/>
+			android:gravity="center">
 
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
+			<LinearLayout
+				android:orientation="horizontal"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:id="@id/btn_save"
+					android:text="SAVE"
+					android:layout_weight="1"/>
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:id="@id/btn_close"
+					android:text="CLOSE"
+					android:layout_weight="1"/>
+
+			</LinearLayout>
+
+			<CheckBox
+				android:id="@id/cb_window"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="WINDOW"
+				android:paddingTop="16dp"
+				android:paddingBottom="16dp"/>
+
+			<Button
+				android:layout_width="match_parent"
+				android:background="@drawable/button"
+				android:textColor="#FF000000"
+				android:layout_height="wrap_content"
+				android:id="@id/btn_mode"/>
+
+			<TextView
+				android:id="@id/txt_value"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:paddingTop="16dp"
+				android:paddingBottom="16dp"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:textColor="#FF000000"/>
+
+			<LinearLayout
+				android:orientation="horizontal"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:text="-1"
+					android:layout_weight="1"
+					android:id="@id/btn_minus_1"/>
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:text="+1"
+					android:layout_weight="1"
+					android:id="@id/btn_plus_1"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:orientation="horizontal"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:text="-10"
+					android:layout_weight="1"
+					android:id="@id/btn_minus_10"/>
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:text="+10"
+					android:layout_weight="1"
+					android:id="@id/btn_plus_10"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:orientation="horizontal"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:text="-100"
+					android:layout_weight="1"
+					android:id="@id/btn_minus_100"/>
+
+				<Button
+					android:layout_width="wrap_content"
+					android:background="@drawable/button"
+					android:textColor="#FF000000"
+					android:layout_height="wrap_content"
+					android:text="+100"
+					android:layout_weight="1"
+					android:id="@id/btn_plus_100"/>
+
+			</LinearLayout>
+
+		</LinearLayout>
+
+		<ListView
+			android:id="@id/list_mode"
+			android:background="#FFFAFAFA"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@id/btn_close"
-			android:text="CLOSE"
-			android:layout_weight="1"/>
+            android:divider="@null"
+			android:visibility="gone"/>
 
-	</LinearLayout>
+	</RelativeLayout>
 
-	<Spinner
-		android:id="@id/spin_mode"
-		android:layout_width="100dp"
-		android:layout_height="wrap_content"
-		android:background="@drawable/button"/>
-
-	<TextView
-		android:id="@id/txt_value"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:gravity="center"
-		android:paddingTop="8dp"
-		android:paddingBottom="8dp"
-		android:textAppearance="?android:attr/textAppearanceSmall"
-		android:textColor="#FF000000"/>
-
-	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
-			android:layout_height="wrap_content"
-			android:text="-1"
-			android:layout_weight="1"
-			android:id="@id/btn_minus_1"/>
-
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
-			android:layout_height="wrap_content"
-			android:text="+1"
-			android:layout_weight="1"
-			android:id="@id/btn_plus_1"/>
-
-	</LinearLayout>
-
-	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
-			android:layout_height="wrap_content"
-			android:text="-10"
-			android:layout_weight="1"
-			android:id="@id/btn_minus_10"/>
-
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
-			android:layout_height="wrap_content"
-			android:text="+10"
-			android:layout_weight="1"
-			android:id="@id/btn_plus_10"/>
-
-	</LinearLayout>
-
-	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
-			android:layout_height="wrap_content"
-			android:text="-100"
-			android:layout_weight="1"
-			android:id="@id/btn_minus_100"/>
-
-		<Button
-			android:layout_width="wrap_content"
-			android:background="@drawable/button"
-			android:textColor="#FF000000"
-			android:layout_height="wrap_content"
-			android:text="+100"
-			android:layout_weight="1"
-			android:id="@id/btn_plus_100"/>
-
-	</LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
 
